# FM_Metacognition_During_Cohort_Identification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
analytics_code/: README.md  docker_entrypoint.sh  pyproject.toml  requirements.txt
analytics_code/configs/: all_models_dummy_analysis.json  all_models_dummy_analysis_document_flags.json  all_models_dummy_analysis_document_flags_by_validation.json  pseudonymised_dummy_reference.csv  pseudonymised_dummy_reference_document_flags.csv
analytics_code/tests/: conftest.py  test_analytics_common.py  test_analytics_config.py  test_cli.py  test_data_prep.py  test_dropout_analysis.py  test_dummy_data_generation.py  test_full_performance.py  test_json_repair.py  test_metrics.py  test_missingness_threshold.py  test_narrative_analysis.py  test_predictions.py  test_tiered_performance.py  test_truth_labels.py
python_client/: README.md  pyproject.toml  requirements.txt
python_client/configs/: all_models_dummy_deepseek14.json  all_models_dummy_deepseek14_t050.json  all_models_dummy_deepseek32.json  all_models_dummy_gemma4_31b.json  all_models_dummy_m42.json  all_models_dummy_m42_t1.json  all_models_dummy_mixtral.json  all_models_dummy_mixtral_t1.json  all_models_dummy_qwen32.json  chronological_config.example.json
python_client/data/: clinical_letters_filtered_dummy.csv  endoscopy_filtered_dummy.csv  histopathology_filtered_dummy.csv
python_client/prompt_templates/: dual_shot.txt  single_shot.txt  zero_shot.txt
python_client/tests/: test_api.py  test_config.py  (+5 more)
(+58 files in other folders)
