[tool.poetry]
name = "python-client"
version = "0.1.0"
description = "Generic chronological experiment runner for Gradio-hosted LLM APIs"
authors = ["Open Source Release"]
readme = "README.md"
license = "GPL-2.0-only"
packages = [{ include = "python_client", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
gradio-client = "^1.5.1"
openpyxl = "^3.1.5"
tiktoken = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
chronology-client = "python_client.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
